# LEARN_CPP_OOP

./: .gitignore  CMakeLists.txt  README.md  commands.txt  main.cpp
base/: base_class.cpp  base_class.h
src/: object.cpp  object.h
